--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start":"node app.js"
   },
   "author": "ey",
   "license": "ISC",
+  "engines": {
+    "node": "12.14.1"
+  },
   "dependencies": {
     "body-parser": "^1.19.0",
     "ejs": "^3.0.2",
